# spkrd

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
changelog/: 20250829-audio-feedback-script.md  20250829-cargo-test-fixes.md  20250829-daemon-support.md  20250829-examples-makefile.md  20250829-freebsd-speaker-server.md  20250829-makefile-creation.md  20250829-port-change.md  20250829-project-overview.md  20250829-rc-script-pidfile-fix.md  20250829-rust-client-server-option.md  20250829-shell-integration.md  20250829-spkrc-config-flexibility.md  20250829-verbose-flag-rust-client.md  20250829-zsh-integration-testing.md  20250903-multiple-server-support.md  20251013-rc-script-boot-issue.md  20260502-cpal-backend-iteration.md  20260503-ci-alsa-dep.md  20260503-configurable-melody-max-length.md  20260503-cpal-audio-backend-support.md  20260503-cpal-cancellation-bug.md  20260503-dependabot-alerts.md  20260503-linux-systemd-makefile.md  20260503-mml-tunes-organization.md  20260503-pcspeaker-frequency-response.md  20260503-square-phase-reset.md  20260504-pulseaudio-stream-leak.md  20260507-pulseaudio-disconnects-after-first-sample.md  20260508-cpal-pulseaudio-suspend-recovery.md  20260508-cpal-realtime-denied-aborts-playback.md
examples/: Cargo.toml  Makefile  README.md  client.go  client.rs  spkcmd  spkcmd-bash.sh  spkcmd-zsh.sh
examples/tunes/: bach.mml  dance-of-the-cuckoos.mml  fur-elise.mml  happy-birthday.mml  jingle-bells.mml  mary-had-a-little-lamb.mml  ode-to-joy.mml  super-mario-bros.mml  twinkle-twinkle-little-star.mml
rc.d/: spkrd
src/: cpal_backend.rs  error.rs  freebsd_speaker.rs  lib.rs  main.rs  mml.rs  server.rs  speaker.rs
systemd/: spkrd.service
tests/: integration_tests.rs
