[package]
name = "spkrd"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "FreeBSD speaker device network server"
license = "BSD-2-Clause"
repository = "https://github.com/yourusername/spkrd"
keywords = ["freebsd", "speaker", "network", "http", "server"]
categories = ["network-programming", "hardware-support"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
daemonize = "0.5"
log = "0.4"
env_logger = "0.10"
syslog = "6.0"

[dev-dependencies]
reqwest = "0.11"
tempfile = "3.0"